--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   shared_preferences: ^2.5.4
   provider: ^6.1.5+1
   carousel_slider: ^5.1.1
+  dio: ^5.9.0
+  audioplayers: ^6.5.1
 
 dev_dependencies:
   flutter_test:
