--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,8 +22,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   flutter_lints: ^6.0.0
+  flutter_launcher_icons: ^0.14.4
+
+# =========================
+# APP ICON CONFIG
+# =========================
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/islami_logo.png"
+  remove_alpha_ios: true
 
 flutter:
   uses-material-design: true
