--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   carousel_slider: ^5.1.1
   dio: ^5.9.0
   audioplayers: ^6.5.1
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
@@ -25,9 +26,7 @@ dev_dependencies:
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
 
-# =========================
-# APP ICON CONFIG
-# =========================
+
 flutter_launcher_icons:
   android: true
   ios: true
